Test/Files/Parser/FullParserTestCases/Good/FullTests/testcase00_01.java
/* count from 0 to 9 */

class mainclass
{
   public static void main( String[] trash )
   {
      int a = 0;

      while ( a < 10 )
      {
         System.out.println( a );
         a = a + 1;
      }
   }
}

